<?xml version="1.0"?>
<package>
  <name>myzharbot_robot_ros</name>
  <version>0.0.1</version>
  <description>
	This is an example of configuration of a robotic system based
	on the board uNav or the board RoboController.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</maintainer>
  <maintainer email="mauro.soligo@katodo.com">Mauro Soligo</maintainer>
  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/explorer_robot</url> -->
  <url type="repository">https://github.com/officinerobotiche/myzharbot_robot_ros</url>



  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</author>
  <author email="mauro.soligo@katodo.com">Mauro Soligo</author>
  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>serial_bridge</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
