<?xml version="1.0"?>

<package>
  <name>ros_myzharbot_robot</name>
  <version>0.0.1</version>
  <description>
	This is the configuration package for the robot MyzharBot.
  </description>

  
  <maintainer email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</maintainer>
  <maintainer email="mauro.soligo@katodo.com">Mauro Soligo</maintainer>
  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/officinerobotiche/myzharbot_robot_ros</url>

  <author email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</author>
  <author email="mauro.soligo@katodo.com">Mauro Soligo</author>
  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>

  <run_depend>tf</run_depend>
  <run_depend>ros_serial_bridge</run_depend>
  <run_depend>ros_robot_teleoperation</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>ros_inemo_m1_imu</run_depend>




</package>
