<?xml version="1.0"?>
<package>
  <name>myzharbot_control</name>
  <version>0.1.0</version>
  <description>
	This is the configuration package for the robot myzharbot.
  </description>

  
  <maintainer email="myzhar@robot-home.it">Walter Lucetti</maintainer>

  <license>LGPLv3</license>

  <url type="repository">https://github.com/Myzhar/ros_myzharbot_robot.git</url>

  <author email="myzhar@robot-home.it">Walter Lucetti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>ros_myzharbot_description</run_depend>
  <run_depend>orbus_interface</run_depend>

</package>
