<?xml version="1.0"?>
<package>
  <name>myzharbot_description</name>
  <version>0.1.0</version>
  <description>
	This is the configuration package for the robot myzharbot.
  </description>

  
  <maintainer email="myzhar@robot-home.it">Walter Lucetti</maintainer>

  <license>LGPLv3</license>

  <url type="repository">https://github.com/Myzhar/ros_myzharbot_robot.git</url>

  <author email="myzhar@robot-home.it">Walter Lucetti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

</package>
