<?xml version="1.0"?>
<package>
  <name>myzharbot_navigation</name>
  <version>0.1.0</version>
  <description>Autonomous mapping and navigation demos for robot myzharbot</description>

  <author email="myzhar@robot-home.it">Walter Lucetti</author>

  <maintainer email="myzhar@robot-home.it">Walter Lucetti</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://myzharbot.robot-home.it</url>

  <url type="repository">https://github.com/Myzhar/ros_myzharbot_robot.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
